Reset need_trigger_scrollbar_show_ in SAC::DidMouseLeave

This issue is caused by need_trigger_scrollbar_show_ state not reset then
no show event posted.

BUG=704245
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2766383002
Cr-Commit-Position: refs/heads/master@{#459213}

Former-commit-id: e8caf7c191831e7272edede1ed32508557a2ce20